# smooth-slider

./: .gitignore  CMakeLists.txt  README.md  bob_model_change.csv  bob_wr.txt  display_stats.py  display_wins.py
include/agents/basic/: forward_slider.h
include/agents/gui/: SliderGUI.h
include/commons/: resource.h  util.h
include/commons/ai/: Strategy.h
include/commons/ai/agent/: Minimax.h
include/learner/: Trainer.h
include/slider/: Board.h  Move.h  Referee.cc  Referee.h  Slider.h  model.h  slider_utils.h  td_leaf_lambda.h
include/slider/evaluation_functions/: basic_eval.h
include/slider/gui/: SliderGUI.h  slider_render_window.h
include/slider/io/: SliderIO.h
res/models/: alice.txt  bob.txt  bob.txt.bak
src/: main.cpp  model.cpp
src/agents/basic/: forward_slider.cpp
src/agents/gui/: SliderGUI.cpp
src/agents/io/: SliderIO.cpp
src/commons/: util.cc  util.cpp
src/learner/: Trainer.cpp
src/slider/: Board.cc  Board.cpp  Move.cpp  Referee.cpp  Slider.cc  Slider.cpp  td_leaf_lambda.cpp
src/slider/evaluation_functions/: basic_eval.cpp  basic_eval.h.cc
src/slider/gui/: SliderGUI.cc  SliderGUI.cpp  slider_render_window.cpp
src/slider/io/: SliderIO.cc  SliderIO.cpp
